--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Data files too big for github
 data_to_ignore/*
-# Results of QC and Profile plot output, both the pdf reports, and the .rda data intermediates
+# Selected output
 data/OT_vs_IT/output/*.pdf
 data/OT_vs_IT/output/*.rda
+data/OT_vs_IT/output/processed.quant.rda
 # History files
 .Rhistory
 .Rapp.history
