--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ data_to_ignore/*
 # Selected output
 data/OT_vs_IT/output/*.pdf
 data/OT_vs_IT/output/*.rda
+data/OT_vs_IT/output/*.csv
 data/OT_vs_IT/output/processed.quant.rda
 # History files
 .Rhistory
