--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # All output
 output/*
 LFQ_output/*
+TMT_output/*
 *.log
 
 # All input
 input/*
 LFQ_input/*
+TMT_input/*
 
 # R project file
 *.Rproj
