--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ output/*
 LFQ_output/*
 TMT_output/*
 TMT_phos_output/*
+LFQ_output_subgroups/*
+TMT_output_subgroups/*
+TMT_phos_output_subgroups/*
 *.log
 
 # All input
